Add configuration builds to flake checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,4 @@ jobs:
     uses: christianharke/flake-commons/.github/workflows/nix-ci.yml@main
     with:
       branch: master
-  nix-ci-nixos-vm:
-    uses: christianharke/flake-commons/.github/workflows/nix-ci.yml@main
-    with:
-      branch: master
-      nix-command: build .#nixosConfigurations.nixos-vm.config.system.build.toplevel
-  nix-ci-non-nixos-vm-christian:
-    uses: christianharke/flake-commons/.github/workflows/nix-ci.yml@main
-    with:
-      branch: master
-      nix-command: build --impure .#homeConfigurations."christian@non-nixos-vm".activationPackage
-  nix-ci-non-nixos-vm-demo:
-    uses: christianharke/flake-commons/.github/workflows/nix-ci.yml@main
-    with:
-      branch: master
-      nix-command: build --impure .#homeConfigurations."demo@non-nixos-vm".activationPackage
+      nix-command: flake check --impure
