--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,5 +7,6 @@ jobs:
     with:
       branch: ${{ github.ref_name }}
       nix-command: flake check --impure
+      system: x86_64-linux
     secrets:
       CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
