--- a/home/programs/abcde/configs/abcde_mp3_mp3enc.conf
+++ b/home/programs/abcde/configs/abcde_mp3_mp3enc.conf
@@ -44,15 +44,15 @@ CDDISCID=cd-discid
 OUTPUTDIR="$HOME/Music"               
 ACTIONS=cddb,read,encode,tag,move,playlist,clean
 
-OUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${TRACKNUM}.${TRACKFILE}'
-VAOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${TRACKNUM}.${ARTISTFILE}-${TRACKFILE}'
-ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}'
-VAONETRACKOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}'
+OUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM} ${TRACKFILE}'
+VAOUTPUTFORMAT='${OUTPUT}/Various/${ALBUMFILE}/${TRACKNUM} - ${ARTISTFILE} - ${TRACKFILE}'
+ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}/${ALBUMFILE}'
+VAONETRACKOUTPUTFORMAT='${OUTPUT}/Various/${ALBUMFILE}'
 
 # Create playlists for single and various-artist encodes. I would suggest
 # commenting these out for single-track encoding.
-PLAYLISTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}.m3u'
-VAPLAYLISTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}.m3u'
+PLAYLISTFORMAT='${OUTPUT}/${ARTISTFILE}/${ALBUMFILE}.m3u'
+VAPLAYLISTFORMAT='${OUTPUT}/Various/${ALBUMFILE}.m3u'
 
 mungefilename ()
 {
