--- a/home/programs/abcde/configs/abcde_lossless_tta.conf
+++ b/home/programs/abcde/configs/abcde_lossless_tta.conf
@@ -61,15 +61,15 @@ OUTPUTDIR="$HOME/Music"
 # The default actions that abcde will take.
 ACTIONS=cddb,playlist,read,encode,tag,move,clean
 
-OUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${TRACKNUM}.${TRACKFILE}'
-VAOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${TRACKNUM}.${ARTISTFILE}-${TRACKFILE}'
-ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}'
-VAONETRACKOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}'
+OUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM} ${TRACKFILE}'
+VAOUTPUTFORMAT='${OUTPUT}/Various/${ALBUMFILE}/${TRACKNUM} - ${ARTISTFILE} - ${TRACKFILE}'
+ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}/${ALBUMFILE}'
+VAONETRACKOUTPUTFORMAT='${OUTPUT}/Various/${ALBUMFILE}'
 
 # Create playlists for single and various-artist encodes. I would suggest
 # commenting these out for single-track encoding.
-PLAYLISTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}.m3u'
-VAPLAYLISTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}.m3u'
+PLAYLISTFORMAT='${OUTPUT}/${ARTISTFILE}/${ALBUMFILE}.m3u'
+VAPLAYLISTFORMAT='${OUTPUT}/Various/${ALBUMFILE}.m3u'
 
 # This function takes out dots preceding the album name, and removes a grab
 # bag of illegal characters. It allows spaces, if you do not wish spaces add
