Add gamemode indicator to mangohud

--- a/home/roles/gaming/mangohud/configs/MangoHud.conf
+++ b/home/roles/gaming/mangohud/configs/MangoHud.conf
@@ -160,7 +160,7 @@ throttling_status
 # histogram
 
 ### Display GameMode / vkBasalt running status
-# gamemode
+gamemode
 # vkbasalt
 
 ### Gamescope related options
