--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     secrets:
       CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
   nix-ci-arm:
-    uses: christianharke/flake-commons/.github/workflows/nix-ci-arm.yml@main
+    uses: christianharke/flake-commons/.github/workflows/nix-ci-arm.yml@nix-on-droid-ci
     with:
       branch: ${{ github.ref_name }}
       nix-command: build .#nixOnDroidConfigurations.nix-on-droid.activationPackage --impure
