--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@
 name: "Update inputs"
 on:  # yamllint disable-line rule:truthy
   schedule:
-    - cron: "0 1 * * *"
+    - cron: "0 1 * * 1"
   workflow_dispatch:
 
 jobs:
